--- a/client/package.json
+++ b/client/package.json
@@ -62,13 +62,14 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.17",
-    "typescript": "5.6.3",
-    "vite": "^5.4.19"
+    "typescript": "^5.0.0",
+    "vite": "^4.0.0"
   }
 }
