📸 LIVE PREVIEWS: Real Screenshots of All Sites
✅ LIVE PREVIEW SYSTEM IMPLEMENTED:
- ✅ Automated screenshot capture using Playwright
- ✅ Real screenshots of all live sites
- ✅ Desktop and mobile viewport captures
- ✅ Updated project data to use live images

🎯 CAPTURED SITES:
- ✅ Portfolio: https://www.trichardson.dev/
- ✅ Job Tracker: https://total-job-tracker.vercel.app
- ✅ Purple Lounge Spa: https://purple-lounge-spa.vercel.app/
- ✅ Total Control: https://total-control-six.vercel.app/auth

🖼️ LIVE PREVIEW ASSETS:
- ✅ Desktop covers (1200x800) for project cards
- ✅ Mobile thumbnails (375x667) for responsive display
- ✅ Full page screenshots for detailed views
- ✅ Real-time captures of actual live sites

🔧 TECHNICAL IMPLEMENTATION:
- ✅ Playwright automation for screenshot capture
- ✅ Multiple viewport sizes (desktop, mobile)
- ✅ Network idle wait for complete page loads
- ✅ User agent spoofing to avoid bot detection
- ✅ Automated script: npm run previews:live

♿ USER EXPERIENCE:
- ✅ Authentic previews of actual live sites
- ✅ Shows real design, content, and functionality
- ✅ Desktop and mobile responsive previews
- ✅ Professional appearance with real screenshots

The portfolio now showcases authentic live previews of all your deployed applications, giving visitors a true representation of your work!

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "type-check": "tsc --noEmit",
     "previews:capture": "node scripts/capture-previews.js",
     "previews:optimize": "node scripts/optimize-previews.js",
-    "previews": "npm run previews:capture && npm run previews:optimize"
+    "previews": "npm run previews:capture && npm run previews:optimize",
+    "previews:live": "node scripts/capture-live-previews.js"
   },
   "dependencies": {
     "framer-motion": "^12.23.16",
